# zdppy_mysql

./: .gitignore  README.md  pyproject.toml
examples/: z01_async_mysql.py  z02_mysql.py  z03_mysql_crud.py  z04_async_mysql_crud.py
examples/async_mysql/: z01_添加数据.py  z02_查询数据.py  z05_查询所有数据库.py  z06_创建数据库.py  z07_删除数据库.py  z08_创建表格.py  z09_查询所有表格.py  z10_删除表格.py  z11_重命名表格.py  z12_新增一列.py  z13_删除一列.py  z14_修改一列.py  z15_添加主键.py  z16_删除主键.py  z17_添加外键.py  z18_删除外键.py
examples/mysql/: z01_添加数据.py  z02_查询数据.py  z03_更新数据.py  z04_删除数据.py  z05_查询所有数据库.py  z06_创建数据库.py  z07_删除数据库.py  z08_创建表格.py  z09_查询所有的表格.py  z10_删除表格.py  z11_重命名表格.py  z12_新增一列.py  z13_删除一列.py  z14_修改一列.py  z15_添加主键.py  z16_删除主键.py  z17_添加外键.py  z18_删除外键.py
examples/practice/student_manager_01/: db.sql  practice01.py  practice02.py  practice03.py  practice04.py  practice05.py  practice06.py
examples/practice/students_manager/: README.md  db.sql  practice01.py  practice02.py  practice03.py  practice04.py  practice05.py  practice06.py  practice07.py  practice08.py  practice09.py  practice10.py  practice11.py  practice13.py  practice14.py
zdppy_mysql/: __init__.py  _auth.py  _compat.py  async_mysql.py  charset.py  connections.py  converters.py  cursors.py  err.py  exceptions.py  json_encoder.py  mysql.py  protocol.py  sql.py  util.py  zdppy_mysql.py
zdppy_mysql/constants/: CLIENT.py
zdppy_mysql/libs/: __init__.py
zdppy_mysql/libs/aiomysql/: __init__.py  connection.py  cursors.py
zdppy_mysql/libs/pymysql/: err.py
