[tool.poetry]
name = "zdppy_mysql"
version = "0.2.2"
description = "使用python操作MySQL,同时支持同步版本和异步版本,支持事务"
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
zdppy-log = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
