[tool.poetry]
name = "zdppy_mysql"
version = "0.2.4"
description = "使用python操作MySQL,同步版本,支持事务"
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
